unpackaged/main/default/objects/MID__c/MID__c.object-meta.xml
<CustomObject>
    <description>Merchant identification</description>
    <label>MID</label>
    <nameField>
        <label>MID Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MIDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>