unpackaged/main/default/objects/MID__c/fields/Accept_Tips__c.field-meta.xml
<CustomField>
    <fullName>Accept_Tips__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accept Tips?</label>
    <type>Checkbox</type>
</CustomField>