unpackaged/main/default/objects/MID__c/fields/Amex_Number__c.field-meta.xml
<CustomField>
    <fullName>Amex_Number__c</fullName>
    <label>Amex Merchant Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>