unpackaged/main/default/objects/MID__c/fields/AMEX_OptBlue__c.field-meta.xml
<CustomField>
    <fullName>AMEX_OptBlue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AMEX OptBlue?</label>
    <type>Checkbox</type>
</CustomField>