unpackaged/main/default/objects/MID__c/fields/Annual_Processing_Volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_Processing_Volume__c</fullName>
    <label>Annual Processing Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>