unpackaged/main/default/objects/MID__c/fields/Batch_Time__c.field-meta.xml
<CustomField>
    <fullName>Batch_Time__c</fullName>
    <label>Batch Time?</label>
    <type>Time</type>
</CustomField>