unpackaged/main/default/objects/MID__c/fields/Diners_Club_Number__c.field-meta.xml
<CustomField>
    <fullName>Diners_Club_Number__c</fullName>
    <label>Diners Club Merchant Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>