unpackaged/main/default/objects/MID__c/fields/Discover_Number__c.field-meta.xml
<CustomField>
    <fullName>Discover_Number__c</fullName>
    <label>Discover Merchant Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>