unpackaged/main/default/objects/MID__c/fields/File_ID__c.field-meta.xml
<CustomField>
    <fullName>File_ID__c</fullName>
    <label>File ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>