unpackaged/main/default/objects/MID__c/fields/JCB_Number__c.field-meta.xml
<CustomField>
    <fullName>JCB_Number__c</fullName>
    <label>JCB Merchant Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>