unpackaged/main/default/objects/MID__c/fields/MC_Visa_Number__c.field-meta.xml
<CustomField>
    <fullName>MC_Visa_Number__c</fullName>
    <label>MID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>