unpackaged/main/default/objects/MID__c/fields/Merchant_Account__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Account__c</fullName>
    <label>Merchant Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MIDs</relationshipLabel>
    <relationshipName>MIDs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>