unpackaged/main/default/objects/MID__c/fields/MID_legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>MID_legacy_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>