unpackaged/main/default/objects/MID__c/fields/MID_legacy_System__c.field-meta.xml
<CustomField>
    <fullName>MID_legacy_System__c</fullName>
    <label>Legacy System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>