unpackaged/main/default/objects/MID__c/fields/Previous_MID__c.field-meta.xml
<CustomField>
    <fullName>Previous_MID__c</fullName>
    <label>Previous MID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>