unpackaged/main/default/objects/MID__c/fields/Rate_Program__c.field-meta.xml
<CustomField>
    <fullName>Rate_Program__c</fullName>
    <label>Rate Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat Rate</fullName>
            </value>
            <value>
                <fullName>Advantage Program</fullName>
            </value>
            <value>
                <fullName>SimpleChange</fullName>
            </value>
            <value>
                <fullName>Tiered Pricing</fullName>
            </value>
            <value>
                <fullName>Interchange Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>