unpackaged/main/default/objects/MID__c/fields/S4_Serial__c.field-meta.xml
<CustomField>
    <fullName>S4_Serial__c</fullName>
    <formula>Merchant_Account__r.S4_Serial__c</formula>
    <label>Shift4 Serial Number</label>
    <type>Text</type>
</CustomField>