unpackaged/main/default/objects/MID__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposed</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Former Customer</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Former Partner</fullName>
            </value>
            <value>
                <fullName>Pre-Application Received(100)</fullName>
            </value>
            <value>
                <fullName>Application Resubmitted(125)</fullName>
            </value>
            <value>
                <fullName>Declined(200)</fullName>
            </value>
            <value>
                <fullName>Closed - Merchant Cancelled(300)</fullName>
            </value>
            <value>
                <fullName>Closed - Termination(325)</fullName>
            </value>
            <value>
                <fullName>Seasonal Business(330)</fullName>
            </value>
            <value>
                <fullName>Gateway / Accessory Service Only(350)</fullName>
            </value>
            <value>
                <fullName>Awaiting ISO Activation of Underwriting(375)</fullName>
            </value>
            <value>
                <fullName>In Underwriting(400)</fullName>
            </value>
            <value>
                <fullName>On Primary Hold - Need Additional Information(425)</fullName>
            </value>
            <value>
                <fullName>Approved - In Data Entry for Mid Build(500)</fullName>
            </value>
            <value>
                <fullName>Approved - Awaiting Faxed Documentation(550)</fullName>
            </value>
            <value>
                <fullName>Approved(600)</fullName>
            </value>
            <value>
                <fullName>Approved - Installed(650)</fullName>
            </value>
            <value>
                <fullName>Merchant Requesting to Cancel(675)</fullName>
            </value>
            <value>
                <fullName>Approved - Processing(700)</fullName>
            </value>
            <value>
                <fullName>Approved - Seasonal Hold(730)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>